create template crud repository
